--- a/Areas/studentaffairs/Views/studentaffairsdashboard/Index.cshtml
+++ b/Areas/studentaffairs/Views/studentaffairsdashboard/Index.cshtml
@@ -11,7 +11,7 @@
             <!-- page header -->
             <div class="border-bottom pb-3 mb-3 d-lg-flex justify-content-between align-items-center">
                 <div class="mb-3 mb-lg-0">
-                    <h1 class="mb-0 h2 fw-bold">Analytics</h1>
+                    <h1 class="mb-0 h2 fw-bold">Trang chủ</h1>
                 </div>
                 <div class="d-flex">
                     <!-- form -->
