--- a/Areas/studentaffairs/Views/studentaffairstimetable/Import.cshtml
+++ b/Areas/studentaffairs/Views/studentaffairstimetable/Import.cshtml
@@ -1,5 +1,10 @@
-﻿
+﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
+    TrogiangvluEntities models = new TrogiangvluEntities();
+
+    var lstHk = models.HocKy.ToList();
+    var lstNganh = models.Nganh.ToList();
+
     ViewBag.Title = "Student Affairs | Import Thời Khóa Biểu";
     Layout = "~/Areas/studentaffairs/Views/Shared/_StudentAffairsLayout.cshtml";
 }
@@ -14,7 +19,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column; 
+        flex-direction: column;
     }
 
     .drag-file-area {
@@ -164,9 +169,11 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
-                                <a href="admin-dashboard.html">Dashboard</a>
+                                <a href="@Url.Action("index", "studentaffairsdashboard")">Dashboard</a>
                             </li>
-
+                            <li class="breadcrumb-item active" aria-current="page">
+                                Thời Khóa Biểu
+                            </li>
                             <li class="breadcrumb-item active" aria-current="page">
                                 Import Thời Khóa Biểu
                             </li>
@@ -181,16 +188,30 @@
             <!-- Card -->
             <div class="card mb-4" style="padding: 30px;">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-md-6 col-12">
                         <div class="mb-3">
-                            <label class="form-label" for="selectOne">
-                                Học kỳ <span class="text-secondary">(Require)</span>
+                            <label class="form-label" for="importhocky">
+                                Học kỳ
                             </label>
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>---- Chọn học kỳ ----</option>
-                                @for (int i = 1; i <= 999; i++)
+                            <select class="form-select" id="importhocky">
+                                <option selected value="">---- Chọn học kỳ ----</option>
+                                @foreach (var item in lstHk.OrderByDescending(o => o.NgayBatDau).ToList())
                                 {
-                                    <option value="@i">Học kỳ @i</option>
+                                    <option value="@item.id">Học kỳ @item.TenHocKy</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-12">
+                        <div class="mb-3">
+                            <label class="form-label" for="importnganh">
+                                Ngành
+                            </label>
+                            <select class="form-select" id="importnganh">
+                                <option selected value="">---- Chọn ngành ----</option>
+                                @foreach (var item in lstNganh.OrderByDescending(o => o.id).ToList())
+                                {
+                                    <option value="@item.id">@item.TenNganh</option>
                                 }
                             </select>
                         </div>
@@ -199,12 +220,15 @@
                         <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
                         <div class="form-container form-control" style="display: flex; justify-content: center;">
                             <div class="upload-files-container">
+                                <input type="file" id="file-import-tkb" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" class="default-file-input" />
                                 <div class="drag-file-area">
                                     <span class="material-icons-outlined upload-icon"> file_upload </span>
                                     <h3 class="dynamic-message"> Kéo & thả file import </h3>
                                     <label class="label">
-                                        hoặc <span class="browse-files">
-                                            <input type="file" id="file-import-tkb" class="default-file-input" />
+                                        <span>Hoặc</span>
+                                        <br />
+                                        <br />
+                                        <span class="browse-files">
                                             <span class="browse-files-text">chọn file</span> <span>từ thiết bị</span>
                                         </span>
                                     </label>
@@ -228,6 +252,9 @@
                 </div>
             </div>
 
+            <div class="card">
+                <div class="card-header"></div>
+            </div>
 
             <div class="card text-center">
                 <div class="card-header">
@@ -253,132 +280,4 @@
 <script src="~/Content/assets/libs/moment/moment.min.js"></script>
 <script src="~/Content/assets/js/vendors/calendar.js"></script>
 <script src="~/ActiveItemMenu/studentaffairs/studentaffairstimetable/import.js"></script>
-
-<script>
-    $(document).ready(function () {
-        ImportUploadFile();
-
-        $('body').on('click', '.browse-files-text', function () {
-            ImportUploadFile();
-        });
-
-        $('body').on('click', '.upload-button', function () {
-            ImportUploadFile();
-        });
-
-        $('body').on('click', '[id="file-import-tkb"]', function () {
-            ImportUploadFile();
-        });
-
-        function ImportUploadFile() {
-            var isAdvancedUpload = function () {
-                var div = document.createElement('div');
-                return (('draggable' in div) || ('ondragstart' in div && 'ondrop' in div)) && 'FormData' in window && 'FileReader' in window;
-            }();
-
-            let draggableFileArea = document.querySelector(".drag-file-area");
-            let browseFileText = document.querySelector(".browse-files");
-            let uploadIcon = document.querySelector(".upload-icon");
-            let dragDropText = document.querySelector(".dynamic-message");
-            let fileInput = document.querySelector(".default-file-input");
-            let cannotUploadMessage = document.querySelector(".cannot-upload-message");
-            let cancelAlertButton = document.querySelector(".cancel-alert-button");
-            let uploadedFile = document.querySelector(".file-block");
-            let fileName = document.querySelector(".file-name");
-            let fileSize = document.querySelector(".file-size");
-            let progressBar = document.querySelector(".progress-bar");
-            let removeFileButton = document.querySelector(".remove-file-icon");
-            let uploadButton = document.querySelector(".upload-button");
-            let fileFlag = 0;
-
-            fileInput.addEventListener("click", () => {
-                fileInput.value = '';
-                console.log(fileInput.value);
-            });
-
-            fileInput.addEventListener("change", e => {
-                console.log(" > " + fileInput.value)
-                uploadIcon.innerHTML = 'check_circle';
-                dragDropText.innerHTML = 'Đã chọn file Import';
-                document.querySelector(".label").innerHTML = `Kéo & thả file import <br> hoặc <span class="browse-files"> <input hidden id="file-import-tkb" type="file" class="default-file-input" style=""/> <span class="browse-files-text" style="top: 0;"> chọn file </span></span> từ thiết bị`;
-                uploadButton.innerHTML = `Import`;
-                fileName.innerHTML = fileInput.files[0].name;
-                fileSize.innerHTML = (fileInput.files[0].size / 1024).toFixed(1) + " KB";
-                uploadedFile.style.cssText = "display: flex;";
-                progressBar.style.width = 0;
-                fileFlag = 0;
-            });
-
-            uploadButton.addEventListener("click", () => {
-                let isFileUploaded = fileInput.value;
-                if (isFileUploaded != '' || isFileUploaded != null) {
-                    if (fileFlag == 0) {
-                        fileFlag = 1;
-                        var width = 0;
-                        var id = setInterval(frame, 50);
-                        function frame() {
-                            if (width >= 355) {
-                                clearInterval(id);
-                                uploadButton.innerHTML = `<span class="material-icons-outlined upload-button-icon"> check_circle </span> Đã import`;
-                            } else {
-                                width += 5;
-                                progressBar.style.width = width + "px";
-                            }
-                        }
-                    }
-                } else {
-                    cannotUploadMessage.style.cssText = "display: flex; animation: fadeIn linear 1.5s;";
-                }
-            });
-
-            cancelAlertButton.addEventListener("click", () => {
-                cannotUploadMessage.style.cssText = "display: none;";
-            });
-
-            if (isAdvancedUpload) {
-                ["drag", "dragstart", "dragend", "dragover", "dragenter", "dragleave", "drop"].forEach(evt =>
-                    draggableFileArea.addEventListener(evt, e => {
-                        e.preventDefault();
-                        e.stopPropagation();
-                    })
-                );
-
-                ["dragover", "dragenter"].forEach(evt => {
-                    draggableFileArea.addEventListener(evt, e => {
-                        e.preventDefault();
-                        e.stopPropagation();
-                        uploadIcon.innerHTML = 'file_download';
-                        dragDropText.innerHTML = 'Kéo & thả file import';
-                    });
-                });
-
-                draggableFileArea.addEventListener("drop", e => {
-                    uploadIcon.innerHTML = 'check_circle';
-                    dragDropText.innerHTML = 'Đã chọn file Import!';
-                    document.querySelector(".label").innerHTML = `Kéo & thả file import <br> hoặc <span class="browse-files"> <input hidden id="file-import-tkb" type="file" class="default-file-input" style=""/> <span class="browse-files-text" style="top: 0;"> chọn file </span></span> từ thiết bị`;
-                    uploadButton.innerHTML = `Import`;
-
-                    let files = e.dataTransfer.files;
-                    fileInput.files = files;
-                    console.log(files[0].name + " " + files[0].size);
-                    console.log(document.querySelector(".default-file-input").value);
-                    fileName.innerHTML = files[0].name;
-                    fileSize.innerHTML = (files[0].size / 1024).toFixed(1) + " KB";
-                    uploadedFile.style.cssText = "display: flex;";
-                    progressBar.style.width = 0;
-                    fileFlag = 0;
-                });
-            }
-
-            removeFileButton.addEventListener("click", () => {
-                uploadedFile.style.cssText = "display: none;";
-                fileInput.value = '';
-                uploadIcon.innerHTML = 'file_upload';
-                dragDropText.innerHTML = 'Kéo & thả file import';
-                document.querySelector(".label").innerHTML = `hoặc <span class="browse-files"> <input id="file-import-tkb" type="file" class="default-file-input"/> <span class="browse-files-text">chọn file</span> <span>từ thiết bị</span> </span>`;
-                uploadButton.innerHTML = `Import`;
-            });
-        }
-    });
-
-</script>
+<script src="~/Validation/studentaffairs/timetable/import.js"></script>
