add function download file import timetable

--- a/Areas/studentaffairs/Views/studentaffairstimetable/Import.cshtml
+++ b/Areas/studentaffairs/Views/studentaffairstimetable/Import.cshtml
@@ -252,10 +252,6 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="card-header"></div>
-            </div>
-
             <div class="card text-center">
                 <div class="card-header">
                     Tải xuống biểu mẫu
@@ -263,19 +259,58 @@
                 <div class="card-body">
                     <h5 class="card-title">Mẫu Import Thời Khóa Biểu</h5>
                     <p class="card-text">Chọn nút tải xuống bên dưới để tải biểu mẫu Import thời khóa biểu (.xlsx)</p>
-                    <a href="#" class="btn btn-primary">
+                    <a id="downloadformimport" class="btn btn-primary">
                         <i class="bi bi-file-earmark-arrow-down me-1"></i>
                         Tải xuống
                     </a>
-                </div>
-                <div class="card-footer text-muted">
-                    Cập nhật cuối: @DateTime.Now.ToString("HH:mm dd/MM/yyyy")
                 </div>
             </div>
 
         </div>
     </div>
 </section>
+<script type="text/javascript">
+    function Base64ToBytes(base64) {
+        var s = window.atob(base64);
+        var bytes = new Uint8Array(s.length);
+        for (var i = 0; i < s.length; i++) {
+            bytes[i] = s.charCodeAt(i);
+        }
+        return bytes;
+    };
+
+    $('body').on('click', '[id="downloadformimport"]', function () {
+        var fileName = "CNTT UIS-ThoiKhoaBieu_TieuChuan_Mau.xlsx";
+
+        $.ajax({
+            type: "POST",
+            url: $('#requestPath').val() + "studentaffairs/studentaffairstimetable/DownloadFile",
+            data: '{fileName: "' + fileName + '"}',
+            contentType: "application/json; charset=utf-8",
+            dataType: "text",
+            success: function (r) {
+                var bytes = Base64ToBytes(r);
+
+                var blob = new Blob([bytes], { type: "application/octetstream" });
+
+                var isIE = false || !!document.documentMode;
+                if (isIE) {
+                    window.navigator.msSaveBlob(blob, fileName);
+                } else {
+                    var url = window.URL || window.webkitURL;
+                    link = url.createObjectURL(blob);
+                    var a = $("<a />");
+                    a.attr("download", fileName);
+                    a.attr("href", link);
+                    $("body").append(a);
+                    a[0].click();
+                    $("body").remove(a);
+                }
+            }
+        });
+    });
+    
+</script>
 <script src="~/Content/assets/libs/moment/moment-with-locales.min.js"></script>
 <script src="~/Content/assets/libs/moment/moment.min.js"></script>
 <script src="~/Content/assets/js/vendors/calendar.js"></script>
