Add function view timetable

--- a/Areas/studentaffairs/Views/Shared/_StudentAffairsLayout.cshtml
+++ b/Areas/studentaffairs/Views/Shared/_StudentAffairsLayout.cshtml
@@ -9,6 +9,9 @@
     <meta name="keywords" content="trợ giảng khoa cntt, công tác trợ giảng, công tác trợ giảng vlu" />
     <meta name="author" content="Codescandy" />
 
+    <link href="~/Content/assets/libs/multiple-select/css/multiple-select.min.css" rel="stylesheet" />
+
+
     <script>
         // Render blocking JS:
         if (localStorage.theme) document.documentElement.setAttribute("data-theme", localStorage.theme);
@@ -40,6 +43,9 @@
 </head>
 
 <body>
+    @*<div id="pageLoader" style="background: #000000b0; display: none; align-items: center; justify-content: center; width: 100vw; height: 100vh; position: fixed; z-index: 9999;">
+        <span class="spinner-border spinner-border-sm me-2 text-white" style="width: 30px; height: 30px" role="status" aria-hidden="true"></span>
+    </div>*@
     <!-- Wrapper -->
     <div id="db-wrapper">
         <!-- navbar vertical -->
