--- a/Areas/studentaffairs/Views/studentaffairssemesterandmajor/Semester.cshtml
+++ b/Areas/studentaffairs/Views/studentaffairssemesterandmajor/Semester.cshtml
@@ -76,9 +76,12 @@
                                             <a style="font-size: 20px" role="button" id="openSua-@item.id" name="@item.id" class="text-success">
                                                 <i class="bi bi-pencil-square me-2"></i>
                                             </a>
-                                            <a style="font-size: 20px" role="button" id="openXoa-@item.id" fullname="@item.TenHocKy" name="@item.id" class="text-danger">
-                                                <i class="bi bi-trash"></i>
-                                            </a>
+                                            @if (item.ThoiKhoaBieu.Count < 1)
+                                            {
+                                                <a style="font-size: 20px" role="button" id="openXoa-@item.id" fullname="@item.TenHocKy" name="@item.id" class="text-danger">
+                                                    <i class="bi bi-trash"></i>
+                                                </a>
+                                            }
                                         </td>
                                     </tr>
                                 }
@@ -206,7 +209,7 @@
                     </button>
                 </div>
                 <div class="modal-body" id="capnhathocky-partial">
-                   
+
                 </div>
                 <div class="modal-footer">
                     <button id="btnEditClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
