Add function export timetable

--- a/Views/TimeTable/Index.cshtml
+++ b/Views/TimeTable/Index.cshtml
@@ -40,5 +40,10 @@
         </div>
     </div>
 </section>
+
+<section style="display: none" id="table-export-data">
+</section>
+
 <script src="~/Validation/studentaffairs/timetable/load.js"></script>
 <script src="~/Validation/studentaffairs/timetable/filterviewtimtable.js"></script>
+<script src="~/Validation/studentaffairs/timetable/exportfile.js"></script>
