--- a/Views/Shared/_StudentAffairsLayout.cshtml
+++ b/Views/Shared/_StudentAffairsLayout.cshtml
@@ -44,8 +44,8 @@
 
 <body>
     @*<div id="pageLoader" style="background: #000000b0; display: none; align-items: center; justify-content: center; width: 100vw; height: 100vh; position: fixed; z-index: 9999;">
-        <span class="spinner-border spinner-border-sm me-2 text-white" style="width: 30px; height: 30px" role="status" aria-hidden="true"></span>
-    </div>*@
+            <span class="spinner-border spinner-border-sm me-2 text-white" style="width: 30px; height: 30px" role="status" aria-hidden="true"></span>
+        </div>*@
     <!-- Wrapper -->
     <div id="db-wrapper">
         <!-- navbar vertical -->
@@ -219,5 +219,6 @@
     <script src="~/Content/assets/js/vendors/flatpickr.js"></script>
 
     <script src="~/Content/assets/libs/Sweetalert2/js/sweetalert2.all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
 </body>
 </html>
