--- a/Views/TimeTable/_Index.cshtml
+++ b/Views/TimeTable/_Index.cshtml
@@ -10,7 +10,7 @@
     int id_hkGanNhat = 0;
     if (lstHocKy.Count > 0)
     {
-        var hkGanNhat = lstHocKy.OrderBy(o => o.id).ToList().FirstOrDefault(f => f.NamBatDau == currentYear && f.NgayBatDau > currentDate);
+        var hkGanNhat = lstHocKy.OrderByDescending(o => o.NgayBatDau).ToList().FirstOrDefault(f => f.NamBatDau == currentYear);
         if (hkGanNhat == null)
         {
             id_hkGanNhat = lstHocKy.First().id;
@@ -76,13 +76,13 @@
     <div id="filterParentLoad">
         <div class="card-header border-bottom-0 pt-0">
             <div class="row">
-                <div class="mb-3 col-md-4 col-12">
+                <div class="mb-3 col-md-3 col-12">
                     <label class="form-label">Chú thích</label>
                     <div class="form-control">
                         <span class="badge bg-warning me-2">Thực hành</span><span class="badge bg-success">Lý thuyết</span>
                     </div>
                 </div>
-                <div class="mb-3 col-md-4 col-12">
+                <div class="mb-3 col-md-3 col-12">
                     <label class="form-label">Lọc môn học</label>
                     <select class="form-select" id="locmonhoc" placeholder="Lọc giảng viên" multiple="multiple">
                         @foreach (var item in lstTkb.GroupBy(o => o.MaMH).ToList())
@@ -92,7 +92,7 @@
                         }
                     </select>
                 </div>
-                <div class="mb-3 col-md-4 col-12">
+                <div class="mb-3 col-md-3 col-12">
                     <label class="form-label">Lọc giảng viên</label>
                     <select class="form-select" id="locgiangvien" placeholder="Lọc giảng viên" multiple="multiple" filter="true">
                         @foreach (var item in lstTkb.GroupBy(o => o.TenCBGD).ToList())
@@ -101,6 +101,13 @@
                             <option selected value="@items.MaCBGD">@items.TenCBGD</option>
                         }
                     </select>
+                </div>
+                <div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
+                    <div style="width: 100%; text-align: end">
+                        <a id="btnExportTkb" class="btn btn-secondary">
+                            <i class="bi bi-file-earmark-arrow-down me-1"></i> Export TKB
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
