Update style button export

--- a/Views/TimeTable/_Index.cshtml
+++ b/Views/TimeTable/_Index.cshtml
@@ -104,8 +104,8 @@
                 </div>
                 <div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
                     <div style="width: 100%; text-align: end">
-                        <a id="btnExportTkb" class="btn btn-secondary">
-                            <i class="bi bi-file-earmark-arrow-down me-1"></i> Export TKB
+                        <a id="btnExportTkb" class="btn btn-outline-secondary">
+                            <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
                         </a>
                     </div>
                 </div>
