--- a/Views/TimeTable/_FilterParentData.cshtml
+++ b/Views/TimeTable/_FilterParentData.cshtml
@@ -6,13 +6,13 @@
 <div id="filterParentLoad">
     <div class="card-header border-bottom-0 pt-0">
         <div class="row">
-            <div class="mb-3 col-md-4 col-12">
+            <div class="mb-3 col-md-3 col-12">
                 <label class="form-label">Chú thích</label>
                 <div class="form-control">
                     <span class="badge bg-warning me-2">Thực hành</span><span class="badge bg-success">Lý thuyết</span>
                 </div>
             </div>
-            <div class="mb-3 col-md-4 col-12">
+            <div class="mb-3 col-md-3 col-12">
                 <label class="form-label">Lọc môn học</label>
                 <select class="form-select" id="locmonhoc" placeholder="Lọc giảng viên" multiple="multiple">
                     @foreach (var item in lstTkb.GroupBy(o => o.MaMH).ToList())
@@ -22,7 +22,7 @@
                     }
                 </select>
             </div>
-            <div class="mb-3 col-md-4 col-12">
+            <div class="mb-3 col-md-3 col-12">
                 <label class="form-label">Lọc giảng viên</label>
                 <select class="form-select" id="locgiangvien" placeholder="Lọc giảng viên" multiple="multiple" filter="true">
                     @foreach (var item in lstTkb.GroupBy(o => o.TenCBGD).ToList())
@@ -31,6 +31,13 @@
                         <option selected value="@items.MaCBGD">@items.TenCBGD</option>
                     }
                 </select>
+            </div>
+            <div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
+                <div style="width: 100%; text-align: end">
+                    <a id="btnExportTkb" class="btn btn-outline-secondary">
+                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                    </a>
+                </div>
             </div>
         </div>
     </div>
